fix alignment inside tile

--- a/ui/project-managment-admin/src/app/dashboard/add-project-card/add-project.component.css
+++ b/ui/project-managment-admin/src/app/dashboard/add-project-card/add-project.component.css
@@ -1,7 +1,8 @@
 .example-card {
-  margin: 10px 10px 10px 40px;
+  margin: 10px 10px 10px 10px;
   max-width: 170px;
   min-height: 170px;
+  width: 100%;
 }
 
 .card-title {
