--- a/ui/project-managment-admin/src/app/dashboard/dashboard.component.css
+++ b/ui/project-managment-admin/src/app/dashboard/dashboard.component.css
@@ -15,11 +15,15 @@
 .project-card {
   height: 300px;
   width: 300px;
-  padding-top: 10px;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 mat-grid-list {
   margin-top: 5px;
 }
+
 
